This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/31/20: Added try-catch blocks to script structure for error handling.

7/31/20: Fixed frame file options dialog to show multishot position for DE
cameras.

7/30/20: Added AlignWithRotation script command.

7/29/20: Added new plugin build for GMS 3.4.

7/29/20: Added Reset Log Position to File menu to rescue lost log.

7/29/20: Fixed shift double-click to remove point when groups collapsed.

7/29/20: Added optional argument to LoadNavMap/LoadOtherMap for buffer to read
into.

7/22/20: Fixed test for whether directory for saving OneView/Rio frames is
defined.

7/22/20: Made autoalign work with float images.

7/21/20: Added calibration for illuminated limits on Titans to allow program
to adapt to changes in the limits.

7/10/20: Added options to CTF-base astigmatism and coma commands to suppress
message box on error.

7/10/20: Added properties to control or skip backlash on the beam tilt and
stigmator changes involved in doing coma/astigmatism operations and adjusting
for image shift.

6/29/20: Fixed multi-hole combiner for case where there is a handedness
changes between stage and image shift coordinate systems and made it try to
avoid placing a hole not to be acquired at the center of a pattern.

6/25/20: Fixed crash in multishot when using custom holes.

6/24/20: SEM_3-8-0beta11
6/24/20: SEM_3-7-14
6/24/20: Changed @ in new multishot frame file numbering scheme to - for
compatibility with Relion.

6/24/20: Added properties to allow waiting for lens relaxation to end on a
JEOL after mag, spot, or alpha changes .

6/24/20: Fixed preexposure for Tietz cameras, broken when support for using
TVIPS flatfields was added.

6/23/20: Added calibration of astigmatism dependence on image shift to Coma